--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,8 @@
 			console.log(data);
 			// document.getElementById("CHECKSUMHASH").value = data.hash;
 			// document.getElementById("paymentForm").submit();
-		});
+		})
+		.catch(err => console.log(err));
 	}
 	
 </script>
