--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
 		}
 		formBody = formBody.join("&");
 		// fetch("http://localhost:8080/ppum", {
-		fetch("https://datapacks.in/ppum", {
+		fetch("https://datapacks.in/pptm", {
 			method: 'POST',
 			headers: {
 				'Content-Type': 'application/x-www-form-urlencoded'					
