--- a/public/index.html
+++ b/public/index.html
@@ -82,8 +82,8 @@
 		.then(res => res.json())
 		.then(data => {
 			console.log(data);
-			// document.getElementById("CHECKSUMHASH").value = data.hash;
-			// document.getElementById("paymentForm").submit();
+			document.getElementById("CHECKSUMHASH").value = data.hash;
+			document.getElementById("paymentForm").submit();
 		})
 		.catch(err => console.log(err));
 	}
