--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 	</tr>
 	<tr>
 		<td><label for="">CHECKSUMHASH</label></td>
-		<td><input type="text" name="CHECKSUMHASH"></td>
+		<td><input type="text" name="CHECKSUMHASH" id="CHECKSUMHASH"></td>
 	</tr>
 	<tr>
 		<td><label for="">MOBILE_NO</label></td>
