--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
 		.then(res => res.json())
 		.then(data => {
 			console.log(data);
-			document.getElementById("CHECKSUMHASH").value = data.hash;
+			document.getElementById("CHECKSUMHASH").value = data.CHECKSUMHASH;
 			document.getElementById("paymentForm").submit();
 		})
 		.catch(err => console.log(err));
